--- a/genindex.html
+++ b/genindex.html
@@ -66,6 +66,10 @@
 </li>
         <li><a href="Architecture.html#CompositeStandard.Defect">CompositeStandard.Defect()</a>
 </li>
+        <li><a href="Architecture.html#CompositeStandard.FibreOrientations">CompositeStandard.FibreOrientations()</a>
+</li>
+        <li><a href="Architecture.html#CompositeStandard.FibreOrientationTolerance">CompositeStandard.FibreOrientationTolerance()</a>
+</li>
         <li><a href="Architecture.html#CompositeStandard.FileMetadata">CompositeStandard.FileMetadata()</a>
 </li>
         <li><a href="Architecture.html#CompositeStandard.GeometricElement">CompositeStandard.GeometricElement()</a>
@@ -94,11 +98,13 @@
 </li>
         <li><a href="Architecture.html#CompositeStandard.Stage">CompositeStandard.Stage()</a>
 </li>
-        <li><a href="Architecture.html#CompositeStandard.Tolerances">CompositeStandard.Tolerances()</a>
+        <li><a href="Architecture.html#CompositeStandard.Tolerance">CompositeStandard.Tolerance()</a>
 </li>
         <li><a href="Architecture.html#CompositeStandard.Wrinkle">CompositeStandard.Wrinkle()</a>
 </li>
         <li><a href="Architecture.html#CompositeStandard.WrinkleTolerance">CompositeStandard.WrinkleTolerance()</a>
+</li>
+        <li><a href="Architecture.html#CompositeStandard.Zone">CompositeStandard.Zone()</a>
 </li>
       </ul></li>
   </ul></td>
@@ -150,6 +156,20 @@
 </li>
       </ul></li>
       <li>
+    CompositeStandard.FibreOrientations()
+
+      <ul>
+        <li><a href="Architecture.html#CompositeStandard.FibreOrientations">built-in function</a>
+</li>
+      </ul></li>
+      <li>
+    CompositeStandard.FibreOrientationTolerance()
+
+      <ul>
+        <li><a href="Architecture.html#CompositeStandard.FibreOrientationTolerance">built-in function</a>
+</li>
+      </ul></li>
+      <li>
     CompositeStandard.FileMetadata()
 
       <ul>
@@ -184,6 +204,8 @@
         <li><a href="Architecture.html#CompositeStandard.MeshElement">built-in function</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     CompositeStandard.Piece()
 
@@ -191,8 +213,6 @@
         <li><a href="Architecture.html#CompositeStandard.Piece">built-in function</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     CompositeStandard.Ply()
 
@@ -250,10 +270,10 @@
 </li>
       </ul></li>
       <li>
-    CompositeStandard.Tolerances()
+    CompositeStandard.Tolerance()
 
       <ul>
-        <li><a href="Architecture.html#CompositeStandard.Tolerances">built-in function</a>
+        <li><a href="Architecture.html#CompositeStandard.Tolerance">built-in function</a>
 </li>
       </ul></li>
       <li>
@@ -268,6 +288,13 @@
 
       <ul>
         <li><a href="Architecture.html#CompositeStandard.WrinkleTolerance">built-in function</a>
+</li>
+      </ul></li>
+      <li>
+    CompositeStandard.Zone()
+
+      <ul>
+        <li><a href="Architecture.html#CompositeStandard.Zone">built-in function</a>
 </li>
       </ul></li>
   </ul></td>
